<resources>
    <string name="app_name">NotiFier</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error">Network error</string>
    <string name="repeat">Repeat</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_2">Cancel</string>
    <string name="input_name_dictionary">Enter the name of the dictionary</string>
    <string name="editing">Editing </string>
    <string name="default_name_dictionary">First syllable</string>
    <string name="create_dictionary">Creating a dictionary</string>
    <string name="move">Move</string>
    <string name="edit">Rename</string>
    <string name="delete">Delete</string>
    <string name="Pn">Mon</string>
    <string name="Vt">W</string>
    <string name="Sr">Cp</string>
    <string name="He">Thu</string>
    <string name="Pt">Pt</string>
    <string name="Sb">Sat</string>
    <string name="Vs">Vs</string>
    <string name="time_intervals">Time intervals</string>
    <string name="you_choose_time">You choose the time of day that is convenient for you</string>
    <string name="the_user_sets_up_schedule">The user sets up the notification graph himself</string>
    <string name="sample_days">Sample days</string>
    <string name="repeat_count">Number of repetitions</string>
    <string name="you_can_specify_number_repetitions">You can specify the number of repetitions of words in the whole sentence</string>
    <string name="repeat_every">Repeat every:</string>
    <string name="brief_description_curve">Notifications are displayed at certain times. These time points were obtained as a result of research by scientists, the method is used if you have 2 days left</string>
    <string name="brief_description_curve_long">If you are not limited in time, use the long-term learning method</string>
    <string name="plateau_effect_description">It was developed by Hugh Thompson and Bob Sullivan. Memorization consists of 11 stages</string>
    <string name="forgetfulness_curve">The Ebbinghaus curve is short</string>
    <string name="frequency_reminders">Interval\nrepetitions</string>
    <string name="h">h</string>
    <string name="m">m</string>
    <string name="mode_settings">Mode settings</string>
    <string name="remember">Remembered</string>
    <string name="show_answer">Show the response</string>
    <string name="ok">Ok</string>
    <string name="forgetfulness_curve_long">The Ebbinghaus curve is long</string>
    <string name="plateau_effect">"Plateau effect"</string>
    <string name="save">Save</string>
    <string name="translation">Translation</string>
    <string name="enter_word">Enter the word</string>
    <string name="dictionaries">Dictionaries</string>
    <string name="dictionary_not_selected">Dictionary not selected</string>
    <string name="dictionary_not_found">Dictionary not found</string>
    <string name="changes_saved">Changes saved</string>
    <string name="choose_dictionary">Select a dictionary</string>
    <string name="such_dictionary_already_exists">Such a dictionary already exists</string>
    <string name="dictionary_has_been_created_successfully">The dictionary was created successfully</string>
    <string name="couldnt_delete_dictionary">Couldn\'t delete dictionary</string>
    <string name="statistics">Statistics</string>
    <string name="recommendations">Recommendations</string>
    <string name="profile">Profile</string>
    <string name="randomizing">Randomizer</string>
    <string name="i_do_not_remember">I don\'t remember</string>
    <string name="remember_2">I remember</string>
    <string name="your_result">Your result</string>
    <string name="couldnt_delete_word">Couldn\'t delete the word</string>
    <string name="update">Update </string>
    <string name="new_version_app">A new version of the application has been released, update it.</string>
    <string name="later">Later</string>
    <string name="dictionary_number_one">Dictionary No.1</string>
    <string name="saving">Conservation...</string>
    <string name="error_saving_mode">Error saving mode</string>
    <string name="first_set_up_mode">First, set up the mode</string>
    <string name="algorithm">Algorithm:</string>
    <string name="step">Step</string>
    <string name="add_an_association">Add an association</string>
    <string name="export_dictionary">Send a dictionary</string>
    <string name="my_dictionaries">My dictionaries</string>
    <string name="could_not_open_file">The file could not be read</string>
    <string name="import_success">Import completed successfully</string>
    <string name="color_hex">#%1$s</string>
    <string name="email_to_support_chooser_title">Write to support...</string>
    <string name="main_msg_NoNetworkConnection">No internet connection</string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="evaluation_app">Rate the app</string>
    <string name="how_to_make_app_better">Write down what needs to be fixed or added to make the app better</string>
    <string name="send">Send</string>
    <string name="how_to_make_app_better_short">Write it...</string>
    <string name="dictionary_could_not_be_loaded">The dictionary could not be loaded</string>
    <string name="onboard_button_continue">Continue</string>
    <string name="onboard_button_skip">Skip </string>
    <string name="begin">Start</string>
    <string name="selected_dictionary">Select\nDictionary</string>
    <string name="mode_settings_1">Mode\nSettings</string>
    <string name="memorization_step">The memorization step:</string>
    <string name="current_language">Current language: %s</string>
    <string name="automatic_translation">Automatic translation</string>
    <string name="apply">Apply</string>
    <string name="import_s">Import</string>
    <string name="exports_s">Export</string>
    <string name="dictionary">Dictionary</string>
    <string name="library">Libraries</string>
    <string name="in_process_implementation">In preprocessing</string>
    <string name="error_loading_dictionaries">To download dictionaries\nplease try later</string>
    <string name="add_to_yourself">Add yourself</string>
    <string name="completed">Completed</string>
    <string name="create_copy">Create a copy</string>
    <string name="notifications_enabled">Notifications are enabled</string>
    <string name="learned">Learned:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_s">Delete %s?</string>
    <string name="reset_algorithm">Reset the algorithm</string>
    <string name="reset_text_algorithm">All words in this dictionary will be reset to step 0, reset it?</string>
    <string name="algorithm_has_been_reset">The algorithm has been reset</string>
    <string name="in_25_seconds">After 25 seconds</string>
    <string name="in_one_minute">After 1 minute</string>
    <string name="in_2_minutes">After 2 minutes</string>
    <string name="in_5_minutes">After 5 minutes</string>
    <string name="in_10_minutes">After 10 minutes</string>
    <string name="in_20_minute">In 20 minutes</string>
    <string name="in_30_minute">After 30 minutes</string>
    <string name="after_1_hour">After 1 hour</string>
    <string name="after_5_hour">After 5 hours</string>
    <string name="after_8_hours">After 8 hours</string>
    <string name="after_1_day">After 1 day</string>
    <string name="after_5_day">After 5 days</string>
    <string name="after_25_day">After 25 days</string>
    <string name="after_21_days">After 21 days</string>
    <string name="after_4_months">After 4 months</string>
    <string name="after_6_months">After 6 months</string>
    <string name="show_intervals">Show intervals</string>
    <string name="one_month">1 month</string>
    <string name="one_year">1 year</string>
    <string name="forever">Forever</string>
    <string name="rub_x">%d₽</string>
    <string name="get_premium">Get PREMIUM</string>
    <string name="purchases_not_available">Purchases are not available at the moment, try again later</string>
    <string name="watch_ads">Watch ads</string>
    <string name="suggestion_of_additional_words">The word limit is reached, get PREMIUM or you can get %d additional words for watching ads</string>
    <string name="suggestion_of_additional_words_only_premium">The word limit is exhausted, get a PREMIUM to remove all restrictions</string>
    <string name="suggestion_of_additional_words_d_d">The word limit is exhausted, get PREMIUM or you can get %d additional words for watching ads\n\nExported:%d/%d</string>
    <string name="suggestion_of_additional_words_s_d_d">The word limit is exhausted, get PREMIUM or you can get %d additional words for watching ads\n\n%sImported:%d/%d</string>
    <string name="voice_acting">Voiceover is available only in PREMIUM</string>
    <string name="copying_dictionaries_is_available">Copying dictionaries is only available in a PREMIUM subscription</string>
    <string name="it_is_available_to_configure_time_intervals">Time intervals can only be configured in a PREMIUM subscription</string>
    <string name="randomizer_limit_text">You have reached the daily usage limit of the randomizer, buy PREMIUM or watch ads for %d additional uses</string>
    <string name="dictionary_export_is_available">Saving the algorithm is only available in a PREMIUM subscription</string>
    <string name="enable_state_of_algorithm">Save the state of the algorithm to a file</string>
    <string name="automatic_backup_to_google_disk">Automatic backup to Google Disk</string>
    <string name="include">Include</string>
    <string name="export">Dictionary export</string>
    <string name="it_will_be_available_only_in_premium">Available only in PREMIUM subscription</string>
    <string name="recommendation_list_2">1. Saving the state of the algorithm allows you to create a full backup of your dictionaries. If you do not specify it, all your algorithms will start working from the first step when exporting.\n\n2.Backup to Google Disk will allow you to save your dictionaries even if you lose your phone.\n\n3.You can create an import file manually on your computer. To do this, create a format file.txt and write words into it in the format [Word;Translation]</string>
    <string name="provide">Provide </string>
    <string name="exit">Exit</string>
    <string name="permissions_required_for_the_algorithm_to_work">Permissions are required for the algorithm to work, because without permissions, the display of words will not be available :(</string>
    <string name="permissions_required_for_the_algorithm_to_work_manually">Permissions are required for the algorithm to work, because without permissions, the display of words will not be available :(\nProvide permissions manually in the settings of the application</string>
    <string name="failed_to_load_ad">Failed to load the ad, try again later</string>
    <string name="error_unknown">Unknown internal error</string>
    <string name="error_called_not_from_ui">Application is not active</string>
    <string name="error_auth">User session has been expired</string>
    <string name="error_in_progress">This operation is already in progress</string>
    <string name="error_connection">Internet connection error</string>
    <string name="error_login_failed">Login has been failed: %1$s</string>
    <string name="unplug">Disable </string>
    <string name="list_of_copies">List of copies</string>
    <string name="google_drive_auto_copying_information">Automatic backup takes place once a day when you first log into the application, if you need to create a backup right now - do it manually by clicking on the \"Export\" button</string>
    <string name="send_file_or_upload_to_google_drive">Send a file or upload it to Google Disk?</string>
    <string name="a_file">A file</string>
    <string name="a_google_drive">A Google Drive</string>
</resources>