<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background_settings"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp">

    <Button
        android:id="@+id/exportAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_all" />

    <Button
        android:id="@+id/exportDictionary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_dictionary" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit" />

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />
</LinearLayout>