<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background_settings"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:paddingVertical="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/editing"
        android:textColor="@color/gray_3"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/firstWord"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/enter_word"
        android:inputType="textCapSentences"
        android:textColor="@color/gray_3"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/swapIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/swap" />

    <EditText
        android:id="@+id/lastWord"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="-10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/translation"
        android:inputType="textCapSentences"
        android:textColor="@color/gray_3"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:text="@string/save"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>