<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_background_settings"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingTop="40dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        tools:text="@string/permissions_required_for_the_algorithm_to_work" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/exit"
            android:paddingHorizontal="15dp"
            android:textSize="14sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/provideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:layout_gravity="center|bottom"
            android:text="@string/provide"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>