<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_background_settings"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    android:paddingTop="40dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        tools:text="Удалить влылвл?" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/yes"
            android:textSize="16sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/no"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/googleButtonV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="5dp"
        android:text="@string/a_google_drive"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>